@@ -1,8 +1,10 @@
 kano-toolset (3.15.0-0) unstable; urgency=low
 
   * Fixed issue with Make Snake launching windowed from Desktop
+  * Create test coverage report
+  * Run tests on push
 
- -- Team Kano <dev@kano.me>  Tue, 19 Dec 2017 11:09:00 +0100
+ -- Team Kano <dev@kano.me>  Wed, 20 Dec 2017 17:15:00 +0100
 
 kano-toolset (3.14.0-0) unstable; urgency=low
 
